# omnio

./: LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/codeql/: codeql-config-default.yml
.github/workflows/: codeql-analysis-default.yml
omnio/: __init__.py  config.py  file_.py  glob.py  http.py  io.py  lib.py  path.py  s3.py
tests/: test_file.py  test_glob.py  test_http.py  test_io.py  test_lib.py  test_path.py  test_s3.py
tests/data/: ascii.txt  flights-3m.csv.bz2  iso-8859-1.txt
