[tool.poetry]
name = "omnio"
version = "1.1.0"
description = "Python 3 library for opening URIs as streaming file-like objects"
authors = ["Bob Green <rgreen@goscoutgo.com>"]
readme = "README.md"
repository = "https://github.com/scoutexchange/omnio"
license = "MIT"
classifiers = ['Development Status :: 5 - Production/Stable',
               'Intended Audience :: Developers',
               'Programming Language :: Python',
               'License :: OSI Approved :: MIT License',
               'Natural Language :: English',
               'Operating System :: OS Independent',
               'Programming Language :: Python',
               'Programming Language :: Python :: 3',
               'Programming Language :: Python :: 3.6',
               'Programming Language :: Python :: 3.7',
               'Topic :: Internet :: WWW/HTTP',
               'Topic :: Software Development :: Libraries :: Python Modules',
               'Topic :: Utilities']
packages = [
    { include = "omnio" },
    { include = "README.md" },
    { include = "LICENSE" },
]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.10"
requests = "^2.22"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^5.2"
flake8 = "^3.7"
pytest-cov = "^2.8"
responses = "^0.10.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
